--- a/ejercicio-semana-3/src/css/styles.css
+++ b/ejercicio-semana-3/src/css/styles.css
@@ -1,3 +1,7 @@
 @import url("./normalize.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+* {
+    font-family: "Ubuntu", sans-serif;
+}
